changes in sbcl-0.8.14 relative to sbcl-0.8.13:
  * bug fix: backtraces involving undefined functions or assembly
    routines are more informative.  (thanks to Brian Downing)
  * bug fix: mutually referent alien structures now work correctly.
    (reported by Rick Taube)
  * bug fix: structures defined by WITH-ALIEN can be referred to
    within other definitions in the same WITH-ALIEN.

changes in sbcl-0.8.13 relative to sbcl-0.8.12:
  * new feature: SB-PACKAGE-LOCKS. See the "Package Locks" section of
    the manual for details; for now, package locks can be disabled by
    removing :SB-PACKAGE-LOCKS in customize-target-features.lisp, but
    if no major problems are found then it is likely that they will be
    compiled in unconditionally.
  * major incompatible change: LOAD-FOREIGN and LOAD-1-FOREIGN are now
    unsupported operators on all platforms.  To load a shared library
    into SBCL, use SB-ALIEN:LOAD-SHARED-OBJECT.  To load a non-shared
    object file, link it into a shared library outside of SBCL and
    load it using SB-ALIEN:LOAD-SHARED-OBJECT.  (incidentally fixes
    bug #79)
  * bug workaround: ROOM T and the GC were not working together
    reliably, because invariants expected by the SB!VM:INSTANCE-USAGE
    reporting facility aren't preserved. That reporting has been
    disabled, so now until and unless someone figures out how to make it
    work reliably with the current GC, (ROOM T) is equivalent to (ROOM).
  * minor incompatible change: as threatened around sbcl-0.8.0, the
    home package of MOP-related symbols is now SB-MOP, not SB-PCL.
    The symbols are also exported from SB-PCL for backwards
    compatibility, but more so than before SB-PCL should be treated as
    an implementation-internal package.
  * fasl format changed: SBCL 0.8.13 fasls are incompatible with those
    of earlier versions
  * the SB-SPROF contrib now works on (most) non-x86 architectures.
    It is known as of this release not to work on the Alpha, however.