@@ -1792,6 +1792,7 @@ SB-KERNEL) have been undone, but probably more remain."
 				      "ENABLE-INTERRUPT" "ENUMERATION"
 				      "FD-STREAM-FD" "FD-STREAM-P" 
 				      "FOREIGN-SYMBOL-ADDRESS" "FOREIGN-SYMBOL-ADDRESS-AS-INTEGER"
+				      "FOREIGN-SYMBOL-IN-ADDRESS"
 				      "GET-PAGE-SIZE" "GET-SYSTEM-INFO"
 				      "IGNORE-INTERRUPT"
 				      "INT-SAP" "INVALIDATE-DESCRIPTOR" "IO-TIMEOUT"
